--- a/scss/blocks/_city.scss
+++ b/scss/blocks/_city.scss
@@ -6,7 +6,7 @@
 }
 .city__link {  
   display: block;
-  color: $midBrown;
+  color: $brown;
   font-weight: $lightFont;
   text-align: center;
   &:after {
