--- a/scss/blocks/_content.scss
+++ b/scss/blocks/_content.scss
@@ -4,9 +4,6 @@
   padding: rem(50px) 0;
   width: 100%;
 }
-.content__wrap {
-  display: flex;
-}
 .content__lines {
   width: 95%;
   height: 6px;
@@ -19,8 +16,12 @@
 }
 .content__block-row {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  display: flex;  
+}
+.content__block-media {
+  @include laptop {
+    flex-direction: column;
+  }
 }
 
 .content__block-elem {
@@ -33,12 +34,24 @@
   }
 }
 .content__block-desc {
-  width: 45%;
+  //width: 45%;
   @include flex(center, center);
   flex-direction: column;
   text-align: center;
   padding: 0 rem(15px);
+  margin: 0 auto;
+  // @include laptop {
+  //   width: 100%;
+  // }
   & p {
     padding: rem(10px);    
+  }
+}
+.content__block-video {
+  margin: 0 auto;
+}
+@media screen and (max-width: 605px) {
+  .content__block-video {
+    display: none;
   }
 }
