--- a/scss/blocks/_pagination.scss
+++ b/scss/blocks/_pagination.scss
@@ -2,6 +2,7 @@
   line-height: 28px;
   vertical-align: middle;
   text-align: center;
+  margin-bottom: rem(15px);
 }
 .pagination__pages {
   display: inline-flex;
