--- a/scss/blocks/_socials.scss
+++ b/scss/blocks/_socials.scss
@@ -1,6 +1,6 @@
 .socials__list {
   display: flex;
-  margin-bottom: rem(15px);
+  margin: rem(10px) 0;
 }
 .socials__item {
   margin-right: rem(5px);
