--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,14 @@
 @import './blocks/page-content.scss';
 @import './blocks/article.scss';
 @import './blocks/logo.scss';
-
+@import './blocks/toggle-menu.scss';
+@import './blocks/catalog.scss';
+@import './blocks/filter.scss';
+@import './blocks/select.scss';
+@import './blocks/ui-slider.scss';
+@import './blocks/sorting.scss';
+@import './blocks/recommend.scss';
+@import './blocks/personal.scss';
 
 @import './blocks/company-contacts.scss';
 @import './blocks/socials.scss';
