--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -1,28 +1,48 @@
 .menu {
   background-color: $brown;
-  color: #fff;
-  padding-bottom: rem(10px);
+  color: #fff;  
   @include flex(space-between, center);
   flex-shrink: 0;
   min-height: 50px;
   font-size: 12px;
+  position: relative;
 }
-// .menu__container {
-//   @include laptop {
-//     flex-direction: column;
-//     align-items: center;
-//   }
-// }
 .menu__list {
   @include flex(space-between, center);
-  flex: 0.8;  
+  flex: 0.8;
+  overflow: hidden;
+  transition: all .6s;
+  @include tablets {
+    width: 100%;
+    flex-direction: column;
+    order: 1;
+    align-items: stretch;
+    background-color: $brown;
+    max-height: 0;
+  }
 }
-.menu__item {
-  padding: 15px;
+.menu__item {  
   text-transform: uppercase;
   margin:0 rem(10px);
-  white-space: nowrap;
+  white-space: nowrap;  
+  
   &.menu__item--active {
     border-top: 1px solid #fff;
+    @include tablets {
+      border: none;
+    }
+  }
+  &:first-child {
+    @include tablets {
+      border-top: 1px solid $beige;
+    }
+  }
+}
+
+.menu__link {
+  padding: 15px;
+  display: block;
+  @include tablets {
+    padding-left: 5px;
   }
 }
