--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -23,7 +23,7 @@
 }
 .menu__item {  
   text-transform: uppercase;
-  margin:0 rem(10px);
+  margin-right: rem(10px);
   white-space: nowrap;  
   
   &.menu__item--active {
