--- a/scss/blocks/_page-content.scss
+++ b/scss/blocks/_page-content.scss
@@ -13,11 +13,13 @@
   margin-bottom: rem(30px);
   @include phones {
     flex-direction: column;
+    align-items: center;
   }
 }
 .page-content__img {
   width: 25%;
   margin-right: 15px;
+  text-align: center;
   @include phones {
     width: 100%;
   }
