--- a/scss/blocks/_personal.scss
+++ b/scss/blocks/_personal.scss
@@ -1,3 +1,63 @@
 .personal {
   align-self: flex-start;
 }
+.personal-text {
+  display: block;
+  margin: 8px 0;
+}
+.auth__table {
+  color: $brown;
+}
+.auth__table-label {
+  font-weight: $mediumFont;
+  padding: 0 10px;
+}
+.auth__table-input {
+  padding: 8px 5px;  
+  outline: none;
+  &:focus {
+    border-color: $midBrown;
+  }
+}
+.auth__table-row {
+  padding: 5px;
+  font-size: 14px;
+}
+.personal__btn {
+  background: $brown;
+  padding: 10px 34px;
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+}
+.personal__link {
+  padding: 5px;
+  display: block;
+  color: #337ab7;
+}
+
+
+.registration {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.registration__row {
+  display: flex;
+  justify-content: space-between;
+}
+.registration__input {
+  padding: 5px;
+  display: inline-block;
+  margin-left: 10px;
+  outline: none;
+  &:focus {
+    border-color: $midBrown;
+  }
+}
+.registration__submit {
+  width: 100%;
+  text-align: end;
+}
