--- a/scss/blocks/_scrolled.scss
+++ b/scss/blocks/_scrolled.scss
@@ -15,6 +15,7 @@
     position: fixed;
     z-index: 4;
     opacity: 1;
+    top: 0;
     transition: opacity ease .6s;    
   }
 }
@@ -80,6 +81,7 @@
 
 .scrolled__item {
   margin: 0 3px;
+  display: flex;
 }
 
 .scrolled__link {
