--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,12 +31,12 @@
 @import './blocks/toggle-menu.scss';
 @import './blocks/catalog.scss';
 @import './blocks/filter.scss';
-@import './blocks/select.scss';
+@import './blocks/ddslick.scss';
 @import './blocks/ui-slider.scss';
 @import './blocks/sorting.scss';
 @import './blocks/recommend.scss';
 @import './blocks/personal.scss';
-
+@import './blocks/registration.scss';
 @import './blocks/company-contacts.scss';
 @import './blocks/socials.scss';
 @import './blocks/footer.scss';
