--- a/scss/blocks/_city.scss
+++ b/scss/blocks/_city.scss
@@ -1,53 +1,46 @@
-.city {
-  min-width: 90px;
-  padding-bottom: rem(10px);
-  position: relative;
-  display: inline-block;
-}
-.city__link {  
-  display: block;
-  color: $brown;
-  font-weight: $lightFont;
-  text-align: center;
-  &:after {
-    content: "";
-    display: inline-block;
-    font-size: 0;
-    margin-left: 10px;
-    margin-bottom: 2px;
-    border: 6px solid transparent;
-    border-top-color: #999;
-    border-width: 6px 5px 0px;
+.city__wrap {
+  & .ui-selectmenu-button.ui-button {
+    width: auto;
+    border: none;
+    background: #fff;
+    outline: none;
+    color: #3e2c1e;
+    font-weight: $lightFont;
+    &:hover{
+      background: none;
+    }
+    &:active {
+      color: #454545;
+    }
   }
-  &:hover::after {
-    border-top-color: #000;
-    transition: .4s;
-  }  
+  & .ui-selectmenu-icon {
+    &:active {
+      color: #454545;
+    }
+  }
+  & .ui-button:active .ui-icon{
+    background-image: url(../libs/jquery-ui/images/ui-icons_777777_256x240.png);
+  }
 }
-.city__drop {
-  position: absolute;
-  cursor: pointer;
-  width: 100%;
-  height: auto;
-  left: 0;
-  top: 100%;
-  text-align: end;
+.ui-selectmenu-menu {
   box-shadow: 0 2px 10px rgba(0,0,0,.2);
-  color: #fff;
-  display: none;
-  &.city__drop--active {
-    display: block;
+  & .ui-widget{
+    background: #A3ABB1;  
+    border-radius: 1px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    &:hover {
+      background-color: #08C;
+      }
+    & .ui-menu-item {
+      text-align: end;    
+      & .ui-state-active {
+        background: none;
+        border: none;        
+        & .ui-icon{
+          background-image: url(images/ui-icons_777777_256x240.png)!important;
+        }
+      }
+    }
   }
-}
-.city__drop-item {
-  padding: 5px 10px;
-  background: #A3ABB1;
-  border-radius: 3px;
-  &:hover {
-    background-color: #08C;
-  }
-}
-
-.city:hover .city__drop {
-  display: block;
 }
