--- a/scss/blocks/_catalog.scss
+++ b/scss/blocks/_catalog.scss
@@ -57,6 +57,7 @@
 }
 .catalog__control-link {
   margin-left: 5px;
+  display: inline-block;
 }
 .catalog__count-btn {
   margin-top: 10px;
@@ -69,8 +70,3 @@
 .catalog__count-btn--small {
   font-size: rem(16px);
 }
-
-// костыль для JQuery UI
-// .catalog__wrapper {
-//   display: block;
-// }
