--- a/scss/blocks/_login.scss
+++ b/scss/blocks/_login.scss
@@ -1,4 +1,6 @@
 .login {
+  @include flex(center, center);
+  align-self: center;
   color: $lightBrown;
   font-size: rem(14px);
   display: flex;
@@ -18,4 +20,22 @@
   &:last-child::after{
     display: none;
   }
+}
+.login__name{
+  font-size: rem(13px);
+  color:#fff;
+  //border-bottom: 1px solid #fff;
+  text-decoration: underline;
+  //transition: .3s;
+  &:hover {
+    //border-color: transparent;
+    text-decoration: none;
+  }
+}
+.login__btn {
+  color: #fff;
+  background-color: $red;
+  padding: rem(5px) rem(10px);
+  border-radius: 3px;
+  margin-left: 5px;
 }
