--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,3 +40,6 @@
 @import './blocks/company-contacts.scss';
 @import './blocks/socials.scss';
 @import './blocks/footer.scss';
+@import './blocks/modal.scss';
+@import './blocks/client.scss';
+@import './blocks/card.scss';
