--- a/scss/blocks/_calendar.scss
+++ b/scss/blocks/_calendar.scss
@@ -1,8 +1,8 @@
-.compare__link {
+.calendar__link {
   display: inline-flex;
   align-items: center;
 }
-.compare__text {
+.calendar__text {
   border-bottom: 1px solid #000;
   transition: .4s;
   white-space: nowrap;
