--- a/scss/blocks/_personal.scss
+++ b/scss/blocks/_personal.scss
@@ -1,41 +1,41 @@
-.personal {
-  align-self: flex-start;
-  width: 100%;
-}
-.personal-text {
-  display: block;
-  margin: 8px 0;
-}
-.auth__table {
-  color: $brown;
-}
-.auth__table-label {
-  font-weight: $mediumFont;
-  padding: 0 10px;
-}
-.auth__table-input {
-  padding: 8px 5px;  
-  outline: none;
-  &:focus {
-    border-color: $midBrown;
-  }
-}
-.auth__table-row {
-  padding: 5px;
-  font-size: 14px;
-}
-.personal__btn {
-  background: $brown;
-  padding: 10px 30px;
-  border: none;
-  font-size: 16px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  text-align: center;
-}
-.personal__link {
-  padding: 5px;
-  display: block;
-  color: #337ab7;
-}
+// .personal {
+//   align-self: flex-start;
+//   width: 100%;
+// }
+// .personal-text {
+//   display: block;
+//   margin: 8px 0;
+// }
+// .auth__table {
+//   color: $brown;
+// }
+// .auth__table-label {
+//   font-weight: $mediumFont;
+//   padding: 0 10px;
+// }
+// .auth__table-input {
+//   padding: 8px 5px;  
+//   outline: none;
+//   &:focus {
+//     border-color: $midBrown;
+//   }
+// }
+// .auth__table-row {
+//   padding: 5px;
+//   font-size: 14px;
+// }
+// .personal__btn {
+//   background: $brown;
+//   padding: 10px 30px;
+//   border: none;
+//   font-size: 16px;
+//   color: #fff;
+//   cursor: pointer;
+//   display: inline-block;
+//   text-align: center;
+// }
+// .personal__link {
+//   padding: 5px;
+//   display: block;
+//   color: #337ab7;
+// }
