--- a/scss/blocks/_filter.scss
+++ b/scss/blocks/_filter.scss
@@ -22,8 +22,10 @@
   display: flex;
   flex-direction: column;
   min-width: rem(100px);
+  flex: 1;
   @include laptop {
     width: 30%;
+    flex: 1 0 auto;
   }
   @include phones {
     width: 40%;
@@ -37,7 +39,8 @@
   }  
 }
 .filter__col-name {
-  margin-bottom: rem(10px);  
+  margin-bottom: rem(10px);
+  white-space: nowrap;
 }
 .filter__price {
   padding-top: 10px;
@@ -58,21 +61,20 @@
   padding: 7px 15px;
   border-radius: 5px;
   font-style: italic;
+  align-self: flex-start;
+  @include laptop {
+    align-self: stretch;
+  }
 }
-.filter__choice {
-  color: #000;
-  font-style: normal;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 5px;
-}
-.filter__link {
-  font-style: normal;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 0 5px;
-  color: #337ab7;
-  &:hover {
-    text-decoration: underline;
+.filter__reset {
+  background: $brown;
+  color: #fff;
+  padding: 4px 21px;
+  border-radius: 5px;
+  font-style: italic;
+  margin-top: 8px;
+  align-self: flex-start;
+  @include laptop {
+    align-self: stretch;
   }
 }
