--- a/scss/blocks/_scrolled.scss
+++ b/scss/blocks/_scrolled.scss
@@ -50,6 +50,42 @@
     }
   }    
 }
+.scrolled__list {
+  position: relative;
+}
+.scrolled__search {
+  &:hover .scrolled__search-drop {
+    display: block;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    bottom: -25px;
+    left: 0;
+    @include laptop {
+      height: 10px;
+      bottom: -5px;
+    }
+  }
+}
+.scrolled__search-drop {
+  position: absolute;
+  bottom: -55px;
+  background: #fff;
+  right: 0;
+  border: 2px solid $brown;
+  width: 200%;
+  display: none;
+  & .search__inner {
+    border-radius: 0;
+  }
+  @include laptop {
+    bottom: -33px;
+  }
+}
+
 
 .scrolled__container {
   align-items: center;
