--- a/scss/blocks/_toggle-menu.scss
+++ b/scss/blocks/_toggle-menu.scss
@@ -3,6 +3,7 @@
   border: 1px solid #fff;
   border-radius: 5px;
   margin-top: rem(15px);
+  margin-bottom: rem(15px);
   @include flex(center, center);
   align-self: flex-end;
   cursor: pointer;
