--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@
 @import './blocks/phones.scss';
 @import './blocks/goods.scss';
 @import './blocks/cart.scss';
-@import './blocks/compare.scss';
+@import './blocks/calendar.scss';
 @import './blocks/maincontent.scss';
 @import './blocks/slider.scss';
 @import './blocks/content.scss';
