--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,6 @@
 @import './blocks/catalog.scss';
 @import './blocks/filter.scss';
 @import './blocks/ddslick.scss';
-@import './blocks/ui-slider.scss';
 @import './blocks/sorting.scss';
 @import './blocks/recommend.scss';
 @import './blocks/personal.scss';
@@ -43,3 +42,7 @@
 @import './blocks/modal.scss';
 @import './blocks/client.scss';
 @import './blocks/card.scss';
+@import './blocks/choise.scss';
+@import './blocks/ui-slider.scss';
+@import './blocks/ui-select.scss';
+@import './blocks/ui-radio.scss';
