--- a/scss/blocks/_page-content.scss
+++ b/scss/blocks/_page-content.scss
@@ -18,6 +18,7 @@
 }
 .page-content__img {
   width: 25%;
+  //width: 20%;
   margin-right: 15px;
   text-align: center;
   @include phones {
@@ -46,7 +47,10 @@
     color: $brown;
     display: inline-block;
     font-weight: $mediumFont;
-  }  
+  } 
+  & a {
+    display: inline-block;
+  }
   & h2:hover {
     border-color: #000;
   }
