--- a/scss/blocks/_recommend.scss
+++ b/scss/blocks/_recommend.scss
@@ -40,10 +40,7 @@
   transition: filter ease .2s;
   position: relative;
   background: #fff;
-  @include tablets {
-    width: 80%;
-  }
-  filter: grayscale(.8);
+  filter: grayscale(.7);
   &:hover {
     border-color: #c0c0c0;
     z-index: 2;
@@ -51,6 +48,13 @@
   }
   &:hover .recommend__btn {
     opacity: 1;
+  }
+  @include tablets {
+    width: 80%;
+    filter: none;
+    border: 1px solid transparent;
+    border-bottom-color: #c0c0c0;
+    border-radius: 0px;
   }
 }
 .recommend__img-pic {
@@ -65,6 +69,9 @@
   border-radius: 3px;
   margin: 5px 0;
   opacity: 0;
+  @include tablets{
+    opacity: 1;
+  }
 }
 .recommend__name {
   margin: 5px 0;
