--- a/src/templates/pages/product.pug
+++ b/src/templates/pages/product.pug
@@ -72,7 +72,7 @@ block maincontent
 
           li.recommend__item
             .recommend__img
-              img.recommend__img-pic(src='../img/catalog/catalog_5.png' alt='')
+              img.recommend__img-pic(src='./img/catalog/catalog_5.png' alt='')
             a.recommend__group(href='#') Забаглионе
             .recomend__count
 
